--- a/Dimensions-MVC3/packages.config
+++ b/Dimensions-MVC3/packages.config
@@ -11,6 +11,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
   <package id="Modernizr" version="2.0.6" />
   <package id="Nuget.Core" version="1.0.1120.104" />
+  <package id="Spark" version="1.7.0.0" />
+  <package id="Spark.Web.Mvc3" version="1.7.0.0" />
   <package id="System.Web.Providers.Core" version="1.0" />
   <package id="System.Web.Providers.LocalDb" version="1.0" />
+  <package id="WebActivator" version="1.4.4" />
 </packages>
